--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,12 +1,244 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                xmlns:DoubleWaveView="http://schemas.android.com/apk/res-auto"
+                xmlns:workApp="http://schemas.android.com/apk/res-auto"
+                android:background="@color/colorWhite"
+                android:id="@+id/register"
 >
-    <widiazine.bluexuchun.workapp.widget.WaveWidget
+
+    <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="41dp"
+            android:id="@+id/toolBar"
+    >
+        <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@mipmap/ic_back"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+        />
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="注册"
+                android:textSize="18dp"
+                android:textColor="@color/colorBlack"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+
+        />
+    </RelativeLayout>
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/toolBar"
+            android:orientation="vertical"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="28dp"
+    >
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="30dp"
+        >
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/shadow"
+                    android:gravity="center"
+            />
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+            >
+                <ImageView
+                        android:layout_width="22dp"
+                        android:layout_height="22dp"
+                        android:background="@mipmap/phone"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginRight="20dp"
+                />
+                <EditText
+                        android:id="@+id/phone"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:hint="请输入手机号"
+                        android:background="@null"
+                        android:textSize="14dp"
+                />
+            </LinearLayout>
+
+        </RelativeLayout>
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="30dp"
+        >
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/shadow"
+                    android:gravity="center"
+            />
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+            >
+                <ImageView
+                        android:layout_width="22dp"
+                        android:layout_height="22dp"
+                        android:background="@mipmap/password"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginRight="20dp"
+                />
+                <EditText
+                        android:id="@+id/password"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:hint="请输入密码"
+                        android:background="@null"
+                        android:textSize="14dp"
+                />
+            </LinearLayout>
+        </RelativeLayout>
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="30dp"
+        >
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/shadow"
+                    android:gravity="center"
+            />
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+            >
+                <ImageView
+                        android:layout_width="22dp"
+                        android:layout_height="22dp"
+                        android:background="@mipmap/password"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginRight="20dp"
+                />
+                <EditText
+                        android:id="@+id/repassword"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:hint="确认密码"
+                        android:background="@null"
+                        android:textSize="14dp"
+                />
+            </LinearLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="30dp"
+        >
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/shadow"
+                    android:gravity="center"
+            />
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+            >
+                <ImageView
+                        android:layout_width="22dp"
+                        android:layout_height="22dp"
+                        android:background="@mipmap/password"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginRight="20dp"
+                />
+                <EditText
+                        android:id="@+id/code"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:hint="请输入验证码"
+                        android:background="@null"
+                        android:textSize="14dp"
+                />
+                <RelativeLayout
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
+                >
+                    <TextView
+                            android:layout_width="1dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@drawable/wave"
+                    />
+                    <widiazine.bluexuchun.workapp.widget.TextGradient
+                            android:id="@+id/textGrad"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:textSize="13dp"
+                            workApp:tgText="获取验证码"
+                            workApp:color1="#ffd94f"
+                            workApp:color2="#ffad42"
+                    />
+                </RelativeLayout>
+            </LinearLayout>
+        </RelativeLayout>
+        
+        <Button
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="@drawable/btn_login"
+                android:layout_marginBottom="25dp"
+                android:text="注册"
+                android:textColor="@color/colorWhite"
+                android:textSize="15dp"
+        />
+
+    </LinearLayout>
+
+    <com.doublewave.DoubleWaveView
+            android:id="@+id/waveView"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            DoubleWaveView:speedOne="2"
+            DoubleWaveView:speedTwo="1"
+            DoubleWaveView:peakValue="15dp"
+            DoubleWaveView:waveHeight="100dp"
+            DoubleWaveView:waveColor="@color/colorMain"
             android:layout_alignParentBottom="true"
     />
 
