--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".ui.activity.MainActivity"
         android:orientation="vertical"
 >
 
     <include layout="@layout/header"></include>
 
-    <com.moxun.tagcloudlib.view.TagCloudView
-            android:id="@+id/tags"
+    <!--<com.moxun.tagcloudlib.view.TagCloudView-->
+            <!--android:id="@+id/tags"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:layout_weight="1"-->
+            <!--app:autoScrollMode="uniform"-->
+            <!--app:radiusPercent="0.8"-->
+    <!--&gt;-->
+
+
+    <!--</com.moxun.tagcloudlib.view.TagCloudView>-->
+    <FrameLayout
+            android:id="@+id/fragmentframe"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            app:autoScrollMode="uniform"
-            app:radiusPercent="0.8"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/bottomTab"
     >
 
+    </FrameLayout>
 
-    </com.moxun.tagcloudlib.view.TagCloudView>
+    <com.roughike.bottombar.BottomBar
+            android:id="@+id/bottomTab"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            app:bb_tabXmlResource="@xml/bottombar_tabs"
+            app:bb_behavior="underNavbar"
+            app:bb_inActiveTabColor="@color/colorBlack"
+            app:bb_activeTabColor="@color/colorMain"
+    >
 
+    </com.roughike.bottombar.BottomBar>
 
-</LinearLayout>
+</RelativeLayout>
