--- a/app/src/main/res/layout/fragment_improvework.xml
+++ b/app/src/main/res/layout/fragment_improvework.xml
@@ -3,9 +3,18 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <TextView
+
+    <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/improveRefresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="improvework"
-    />
+            android:paddingVertical="8dp"
+    >
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/improveRecycle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
