--- a/app/src/main/res/layout/fragment_workhomework.xml
+++ b/app/src/main/res/layout/fragment_workhomework.xml
@@ -3,7 +3,18 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="homework"
-    />
+    <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/hwrefresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingVertical="8dp"
+    >
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/hwrecycle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </LinearLayout>
