--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="colorWord">#666666</color>
     <color name="colorGray">#DBDBDB</color>
     <color name="colorRed">#F24936</color>
+    <color name="colorBlue">#31B4FF</color>
 </resources>
