--- a/app/src/main/res/xml/bottombar_tabs.xml
+++ b/app/src/main/res/xml/bottombar_tabs.xml
@@ -1,12 +1,12 @@
 <tabs>
     <tab
             id="@+id/home"
-            icon="@drawable/ic_home"
-            title="首页" />
+            icon="@drawable/ic_home_btn"
+            title="首页"/>
     <tab
             id="@+id/learn"
-            icon="@drawable/ic_learn"
-            title="学习情况" />
+            icon="@drawable/ic_learn_btn"
+            title="学习情况"/>
     <tab
             id="@+id/add"
             icon="@drawable/ic_plus"
@@ -16,10 +16,10 @@
     />
     <tab
             id="@+id/work"
-            icon="@drawable/ic_work"
-            title="作业" />
+            icon="@drawable/ic_work_btn"
+            title="作业"/>
     <tab
             id="@+id/user"
-            icon="@drawable/ic_user"
-            title="个人中心" />
+            icon="@drawable/ic_user_btn"
+            title="个人中心"/>
 </tabs>
