--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -146,6 +146,7 @@
                         android:hint="请输入密码"
                         android:background="@null"
                         android:textSize="14dp"
+                        android:inputType="textPassword"
                 />
             </LinearLayout>
         </RelativeLayout>
