--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,84 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/home"
-                android:orientation="vertical"
-                android:background="@color/colorIndex"
+
 >
-    <com.moxun.tagcloudlib.view.TagCloudView
-            android:id="@+id/tags"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:autoScrollMode="uniform"
-            app:radiusPercent="0.7"
-            android:layout_weight="2"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-    >
-
-
-    </com.moxun.tagcloudlib.view.TagCloudView>
 
     <LinearLayout
-            android:layout_width="220dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_gravity="center_horizontal"
-            android:orientation="vertical"
-    >
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:background="@drawable/borderbox"
-                android:layout_marginBottom="20dp"
-                android:layout_marginTop="20dp"
+            android:id="@+id/webFrame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible"
         >
-            <com.makeramen.roundedimageview.RoundedImageView
-                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:id="@+id/logo"
-                    android:src="@mipmap/ic_loading"
-                    android:scaleType="fitCenter"
-                    app:riv_mutate_background="true"
-                    app:riv_oval="true"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-            />
-            <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:gravity="center_vertical"
-            >
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="鹏儿子"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="14dp"
-                />
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="学生"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="14dp"
-                />
-            </LinearLayout>
-        </LinearLayout>
-        <TextView
+        <WebView
+                android:id="@+id/home_webview"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:background="@drawable/borderbox"
-                android:textSize="14dp"
-                android:text="商城"
-                android:textColor="@color/colorWhite"
-                android:gravity="center"
-        />
+                android:layout_height="match_parent"></WebView>
     </LinearLayout>
 
-</LinearLayout>
+    <LinearLayout
+            android:id="@+id/tagFrame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="@color/colorIndex"
+            android:visibility="gone"
+    >
+        <com.moxun.tagcloudlib.view.TagCloudView
+                android:id="@+id/tags"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:autoScrollMode="uniform"
+                app:radiusPercent="0.7"
+                android:layout_weight="2"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="10dp"
+        >
+
+
+        </com.moxun.tagcloudlib.view.TagCloudView>
+
+        <LinearLayout
+                android:layout_width="220dp"
+                android:layout_height="0dp"
+                android:layout_weight="0.7"
+                android:layout_gravity="center_horizontal"
+                android:orientation="vertical"
+        >
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:background="@drawable/borderbox"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="20dp"
+            >
+                <com.makeramen.roundedimageview.RoundedImageView
+                        xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:id="@+id/logo"
+                        android:src="@mipmap/ic_loading"
+                        android:scaleType="fitCenter"
+                        app:riv_mutate_background="true"
+                        app:riv_oval="true"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                />
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center_vertical"
+                >
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="测试名"
+                            android:textColor="@color/colorWhite"
+                            android:textSize="14dp"
+                    />
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="学生"
+                            android:textColor="@color/colorWhite"
+                            android:textSize="14dp"
+                    />
+                </LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+            android:id="@+id/homeHeader"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:background="@color/colorWhite"
+            android:orientation="vertical"
+            android:layout_alignParentTop="true"
+    >
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+        >
+            <ImageView
+                    android:id="@+id/toggle_btn"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@mipmap/ic_logo"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="10dp"
+                    android:visibility="visible"
+            />
+            <TextView
+                    android:id="@+id/headertitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="45dp"
+                    android:textSize="16dp"
+                    android:textColor="@color/colorBlack"
+                    android:text="首页"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center"
+            />
+
+        </RelativeLayout>
+
+
+    </LinearLayout>
+
+</RelativeLayout>
