--- a/app/src/main/res/layout/activity_orderlist.xml
+++ b/app/src/main/res/layout/activity_orderlist.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:background="@color/colorWhite"
+>
     <include layout="@layout/header"></include>
     <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/order_refresh"
