--- a/app/src/main/res/layout/widget_orderlist.xml
+++ b/app/src/main/res/layout/widget_orderlist.xml
@@ -6,7 +6,8 @@
         android:layout_height="wrap_content"
         android:background="@color/colorWhite"
         android:gravity="center"
-        android:layout_margin="16dp"
+        android:paddingHorizontal="8dp"
+        android:paddingVertical="10dp"
 >
     <LinearLayout
             android:layout_width="match_parent"
